	PR middle-end/42874 	* tree-inline.c (cannot_copy_type_1): Removed. 	(copy_forbidden): Don't forbid copying of functions containing 	records/unions with variable length fields.

* gcc.dg/vla-22.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156287 138bc75d-0d04-0410-961f-82ee72b054a4